cmake_minimum_required(VERSION 3.8)
project(AOC15)

set(CMAKE_CXX_STANDARD 17)

add_executable(p01 p01.cpp)
add_executable(p02 p02.cpp)
add_executable(p03 p03.cpp)
add_executable(p04 p04.cpp)
add_executable(p05 p05.cpp)
add_executable(p06 p06.cpp)
add_executable(p07 p07.cpp)
add_executable(p08 p08.cpp)
